Add multiple president selection

--- a/Scraping Code(pickspresident).ipynb
+++ b/Scraping Code(pickspresident).ipynb
@@ -23,36 +23,55 @@
    ],
    "source": [
     "import time\n",
+    "import re\n",
     "from bs4 import BeautifulSoup #use beautifulsoup to scrape data\n",
     "from selenium import webdriver\n",
+    "\n",
     "\n",
     "url = \"http://millercenter.org/the-presidency/presidential-speeches\"\n",
     "\n",
     "browser = webdriver.Chrome() #change this line depending on your system\n",
     "browser.get(url) #go to the website \n",
     "\n",
-    "# All of this is pretty much a place holder, will do the UI once the code works as intended\n",
     "\n",
-    "# command = input(\"Would you like to save Obama's speeches to a csv? (y/n)\")\n",
-    "# if command =='y':\n",
-    "#     pass\n",
-    "# else:\n",
-    "#     pass\n",
     "\n",
-    "president = browser.find_element_by_xpath(\n",
-    "    '/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[43]/label')\n",
-    "president.click()\n",
-    "\n",
-    "time.sleep(4)\n",
-    "#selenium has an execute java script function 'execute_script'\n",
-    "height = 0\n",
-    "for i in range(100):\n",
-    "    browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\") \n",
-    "    height_1 = height\n",
-    "    height = browser.execute_script(\"return document.body.scrollHeight\")\n",
-    "    if height == height_1:\n",
-    "        break\n",
+    "for i in range(43,44):\n",
+    "    x = i\n",
+    "    absolutepath_president = f'/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[{x}]/label'\n",
+    "    president1 = browser.find_element_by_xpath(absolutepath_president)\n",
+    "    president1.click()\n",
     "    time.sleep(2)\n",
+    "\n",
+    "\n",
+    "# president = browser.find_element_by_xpath(\n",
+    "#     '/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[42]/label')\n",
+    "# president.click()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "SCROLL_PAUSE_TIME = 0.8\n",
+    "\n",
+    "\n",
+    "#slight changes to be made!!\n",
+    "\n",
+    "# Get scroll height\n",
+    "last_height = browser.execute_script(\"return document.body.scrollHeight\")\n",
+    "\n",
+    "while True:\n",
+    "    # Scroll down to bottom\n",
+    "    browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "\n",
+    "    # Wait to load page\n",
+    "    time.sleep(SCROLL_PAUSE_TIME)\n",
+    "\n",
+    "    # Calculate new scroll height and compare with last scroll height\n",
+    "    new_height = browser.execute_script(\"return document.body.scrollHeight\")\n",
+    "    if new_height == last_height:\n",
+    "        break\n",
+    "    last_height = new_height\n",
+    "\n",
     "soup = BeautifulSoup(browser.page_source, 'lxml')    "
    ]
   },
@@ -86,13 +105,15 @@
     "\n",
     "# now I want the link strings containting /the-presidency/\n",
     "new_link_str = []\n",
-    "new_link_str2 = []\n",
     "\n",
     "for element in link_str:\n",
     "    if element.find(\"/presidential-speeches/\") >= 0: \n",
     "        new_link_str.append(element)\n",
+    "        \n",
     "\n",
     "\n",
+    "\n",
+    "        \n",
     "# print(new_link_str)\n",
     "\n",
     "obama = dict()\n",
@@ -116,7 +137,24 @@
     "for i in range(len(list2)):\n",
     "    list3.append(str(list2[i]))\n",
     "\n",
-    "         \n",
+    "# print(list3[1])\n",
+    "\n",
+    "#this will be used to clean the text from html tags\n",
+    "def tag_cleanr(text):\n",
+    "    cleanr = re.compile('<.*?>')\n",
+    "    cleantext = re.sub(cleanr, '', text)\n",
+    "    return cleantext\n",
+    "\n",
+    "print(new_link_str[1])\n",
+    "\n",
+    "pattern = r'(\\w)+-\\d{2}-\\d{4}'\n",
+    "match = re.search(pattern, new_link_str[1])\n",
+    "print(match)\n",
+    "\n",
+    "\n",
+    "s = tag_cleanr(list3[1])\n",
+    "\n",
+    "#DATAFRAME\n",
     "\n",
     "# with open('obamaspeeches.csv', 'w') as f:\n",
     "#     writer = csv.writer(f)\n",
