Add Data Cuts v1 Function for NLTK

--- a/NLTK Algth.ipynb
+++ b/NLTK Algth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "177"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -830,56 +830,181 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Users\\diego\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\nltk\\twitter\\__init__.py:20: UserWarning: The twython library has not been installed. Some functionality from the twitter package will not be available.\n",
+      "  warnings.warn(\"The twython library has not been installed. \"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "0.2080050847457627"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import nltk\n",
+    "import numpy as np\n",
     "from statistics import mean\n",
     "nltk.download('vader_lexicon')\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer \n",
-    "score = []\n",
+    "score_compound = []\n",
+    "score_neg=[]\n",
+    "score_pos=[]\n",
     "sid = SentimentIntensityAnalyzer()\n",
     "for sentence in sent_tokenize_list:\n",
     "#    print(sentence)\n",
     "    ss = sid.polarity_scores(sentence)\n",
-    "    score.append(ss['compound'])\n",
+    "    score_compound.append(ss['compound'])\n",
+    "    score_neg.append(ss['neg'])\n",
+    "    score_pos.append(ss['pos'])\n",
     "\n",
     "    for k in ss:\n",
     "        print('{0}: {1}, '.format(k, ss[k]), end='\\n')\n",
     "#     print()\n",
-    "mean(score)"
+    "mean(score_compound)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Thanks for coming and God bless.',\n",
+       "  'Thank you.',\n",
+       "  \"Glad you're here.\",\n",
+       "  'And the surest path to that growth is free markets and free people.',\n",
+       "  'Please be seated.',\n",
+       "  'Consumers benefit from more choices and better prices.',\n",
+       "  'The free market system provides the incentives that lead to prosperity -- the incentive to work, to innovate, to save, to invest wisely, and to create jobs for others.',\n",
+       "  \"And it's easy to be confident when you're a city like New York City.\",\n",
+       "  '\\nThank you very much.',\n",
+       "  \"Today, the success of the world's largest economies comes from their embrace of free markets.\",\n",
+       "  'The United States Congress has an immediate opportunity by approving free trade agreements with Colombia, Peru*, and South Korea.',\n",
+       "  'And that easy credit especially affected the housing market.',\n",
+       "  'The United States is determined to show the way back to economic growth and prosperity.',\n",
+       "  'As well, all nations should pledge to conclude a framework this year that leads to a successful Doha agreement.',\n",
+       "  'We will rebuild our economic strength.',\n",
+       "  'Thank you all for coming.',\n",
+       "  'The massive inflow of foreign capital, combined with low interest rates, produced a period of easy credit.',\n",
+       "  'I thank the Manhattan Institute Board of Trustees and its Chairman Paul Singer for doing good work, being a good policy center.',\n",
+       "  'The record is unmistakable: If you seek economic growth, if you seek opportunity, if you seek social justice and human dignity, the free market system is the way to go.',\n",
+       "  'Because these firms were chartered by the United States Congress, many believed they were backed by the full faith and credit of the United States government.',\n",
+       "  'For example, we should consider improving accounting rules for securities, so that investors around the world can understand the true value of the assets they purchase.',\n",
+       "  'I appreciate the fact that I am here in a fabulous city to give this speech.',\n",
+       "  'This openness is especially urgent during times of economic strain.',\n",
+       "  'Ultimately, the best evidence for free market capitalism is its performance compared to other economic systems.',\n",
+       "  'And as millions of people pursue these incentives together, whole societies benefit.'],\n",
+       " ['It was economic ruin.',\n",
+       "  'Many nations have suffered job losses, and have serious concerns about the worsening economy.',\n",
+       "  'When capital ran short, many faced severe financial jeopardy.',\n",
+       "  'And it would be a terrible mistake to allow a few months of crisis to undermine 60 years of success.',\n",
+       "  'It can be subject to excesses and abuse.',\n",
+       "  'For example, some blame the crisis on insufficient regulation of the American mortgage market.',\n",
+       "  'Soviet communism starved millions, bankrupted an empire, and collapsed as decisively as the Berlin Wall.',\n",
+       "  'Meanwhile, nations that have pursued other models have experienced devastating results.',\n",
+       "  'In the wake of the financial crisis, voices from the left and right are equating the free enterprise system with greed and exploitation and failure.',\n",
+       "  'The result was not economic security.',\n",
+       "  \"It's true this crisis included failures -- by lenders and borrowers and by financial firms and by governments and independent regulators.\",\n",
+       "  'The financial crisis was ignited when booming housing markets began to decline.',\n",
+       "  \"First, we're working toward a common understanding of the causes behind the global crisis.\",\n",
+       "  'As home values dropped, many borrowers defaulted on their mortgages, and institutions holding securities backed by those mortgages suffered serious losses.',\n",
+       "  'Developing nations have been hit hard as nervous investors have withdrawn their capital.',\n",
+       "  'The IMF and World Bank are working to ensure that developing nations can weather this crisis.',\n",
+       "  'But the crisis was not a failure of the free market system.',\n",
+       "  'We saw that resilience after September the 11th, 2001, when our nation recovered from a brutal attack, revitalized our shaken economy, and rallied the forces of freedom in the great ideological struggle of the 21st century.',\n",
+       "  \"This crisis did not develop overnight, and it's not going to be solved overnight.\",\n",
+       "  'It took a taxpayer-funded rescue to keep Fannie and Freddie from collapsing in a way that would have devastated the global financial system.',\n",
+       "  'But the United States and our partner are taking the right steps to get through this crisis.',\n",
+       "  'Because of outdated regulatory structures and poor risk management practices, many financial institutions in America and Europe were too highly leveraged.',\n",
+       "  'Unfortunately, as we have seen in recent months, financial turmoil anywhere in the world affects economies everywhere in the world.',\n",
+       "  'These developments have placed a heavy burden on hardworking people around the world.',\n",
+       "  'Like any other system designed by man, capitalism is not perfect.']]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "score_pos_array = np.array(score_pos)\n",
+    "score_neg_array = np.array(score_neg)\n",
+    "\n",
+    "max_pos_sent_idx = score_pos_array.argsort()[-25:][::-1]\n",
+    "max_pos_sent = []\n",
+    "max_pos_scr = []\n",
+    "\n",
+    "max_neg_sent_idx = score_neg_array.argsort()[-25:][::-1]\n",
+    "max_neg_sent = []\n",
+    "max_neg_scr = []\n",
+    "\n",
+    "for i in max_pos_sent_idx:\n",
+    "    max_pos_sent.append(sent_tokenize_list[i])\n",
+    "    max_pos_scr.append(score_pos[i])\n",
+    "max_pos_sent\n",
+    "\n",
+    "for i in max_neg_sent_idx:\n",
+    "    max_neg_sent.append(sent_tokenize_list[i])\n",
+    "    max_neg_scr.append(score_neg[i])\n",
+    "max_neg_sent\n",
+    "\n",
+    "(mean(max_pos_scr),mean(max_neg_scr))\n",
+    "[max_pos_sent,max_neg_sent]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "neg: 0.522, \n",
-      "neu: 0.29, \n",
-      "pos: 0.188, \n",
-      "compound: -0.5106, \n"
+      "neg: 0.084, \n",
+      "neu: 0.719, \n",
+      "pos: 0.197, \n",
+      "compound: 0.9999, \n"
      ]
     }
    ],
    "source": [
-    "text = 'this is a shitty sentence'\n",
+    "#text = 'this is a shitty sentence'\n",
     "ss = sid.polarity_scores(text)\n",
     "for k in ss:\n",
     "    print('{0}: {1}, '.format(k, ss[k]), end='\\n')\n",
     "#compound -1 to 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'neg': 0.084, 'neu': 0.719, 'pos': 0.197, 'compound': 0.9999}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss"
    ]
   },
   {
