Fix empty speech entries due to website

--- a/Scraping Code(pickspresident).ipynb
+++ b/Scraping Code(pickspresident).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -118,8 +118,8 @@
       "45 2009-02-07  [Thank you, everybody.  Please have a seat.  Y...\n",
       "46 2009-01-29  [It is fitting that with the very first bill I...\n",
       "47 2009-01-20  [I stand here today humbled by the task before...\n",
-      "48 2008-11-04                                                 []\n",
-      "49 2008-08-28                                                 []\n"
+      "48 2008-11-04  [If there is anyone out there who still doubts...\n",
+      "49 2008-08-28  [To Chairman Dean and my great friend Dick Dur...\n"
      ]
     }
    ],
@@ -155,12 +155,26 @@
     "    response = http.request('GET', url)\n",
     "    soup_2 = BeautifulSoup(response.data, 'lxml')\n",
     "    list2.append(soup_2.findAll('div', {\"class\":\"transcript-inner\"}))\n",
+    "    \n",
+    "#     if soup_2.findAll('div', {\"class\":\"transcript-inner\"})=='0':\n",
+    "#         list2.append(soup_2.findAll('div', {\"class\":\"transcript-inner\"}))\n",
+    "#     else:\n",
+    "#         list2.append(soup_2.findAll('div', {\"class\":\"view-transcript\"}))\n",
     "\n",
     "\n",
     "#converting into string due to weird beautifulsoup output    \n",
     "list3=[]\n",
     "for i in range(len(list2)):\n",
-    "    list3.append(str(list2[i]))\n",
+    "    if list2[i]:\n",
+    "        list3.append(str(list2[i]))\n",
+    "    else:\n",
+    "        \n",
+    "        #add comments for why I had\n",
+    "        \n",
+    "        url = \"http://millercenter.org\" + new_link_str[i]\n",
+    "        response = http.request('GET', url)\n",
+    "        soup_2 = BeautifulSoup(response.data, 'lxml')\n",
+    "        list3.append(str(soup_2.findAll('div', {\"class\":\"view-transcript\"})))\n",
     "\n",
     "# print(list3[1])\n",
     "\n",
@@ -176,7 +190,7 @@
     "\n",
     "for i in range(len(list3)):\n",
     "    x = tag_cleanr(list3[i])\n",
-    "    x = x.replace('\\nTranscript\\n', '').replace('\\r\\n', '')\n",
+    "    x = x.replace('Transcript', '').replace('\\r\\n', '').replace('\\n', '')\n",
     "    cleaned_speeches.append(x)\n",
     "\n",
     "\n",
