--- a/marty Scraping.ipynb
+++ b/marty Scraping.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +205,11 @@
     "fin_data = df1.merge(df2, how = \"left\")\n",
     "fin_data = fin_data.merge(df3, how = \"left\")\n",
     "\n",
+    "\n",
     "## This function should work if there are no instances where two speeches happened on consecutive days where\n",
     "def add_speeches_to_fin_data(df, fin_data):\n",
+    "    for i in len(df.Date):\n",
+    "        df['President'][i] = pres_from_date(df.Date[i])\n",
     "    for i in len(df.Date):\n",
     "        df.Date[i] = df.Date[i] + datetime.timedelta(days = 1)\n",
     "    final = fin_data.merge(df, how = \"left\")\n",
@@ -215,6 +218,24 @@
     "        final.Transcript[i + 1] = final.Date[i]\n",
     "    final = final[pd.notna(final.Dow_Change)]        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], shape=(0, 2), dtype='<U13')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
