Add full annotations to the master code

--- a/Master Code - Annotated.ipynb
+++ b/Master Code - Annotated.ipynb
@@ -1,62 +1,94 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of Presidential Speeches \n",
+    "\n",
+    "### Group Members\n",
+    "<font colour =blue> \n",
+    "1. Diego Alonso Delgado Caceres dd2941  <br>\n",
+    "2. Harry Peter Kershaw hpk2114 <br>\n",
+    "3. Martin Feuerstein Mendik maf2250 <br>\n",
+    "4. Subey Dengur sd3231 <br>\n",
+    "</font>\n",
+    "\n",
+    "### Speech Data\n",
+    "This project draws heavily on the work by the Miller Center, an affiliate of the University of Virginia. The Miller Center's website contains transcripts of all presidential speeches:\n",
+    "[millercenter.org](https://millercenter.org/the-presidency/presidential-speeches)\n",
+    "\n",
+    "\n",
+    "#### Packages Used:\n",
+    "1. Beautiful Soup<br>\n",
+    "2. Time<br>\n",
+    "3. Regex<br>\n",
+    "4. Selenium<br>\n",
+    "5. NLTK<br>\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import re\n",
-    "from bs4 import BeautifulSoup #use beautifulsoup to scrape data\n",
-    "from selenium import webdriver\n",
+    "import urllib3 \n",
+    "import pandas as pd\n",
+    "import string\n",
     "\n",
+    "from datetime import datetime\n",
+    "from bs4 import BeautifulSoup #using beautifulsoup to parse html\n",
+    "from selenium import webdriver #using selenum to deal with the millercenter.org infite scroll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use Selenium to overcome the challenge of scaping a webpage with an infinite scroll feature.    \n",
+    "# First: we will set the url and then we will go to Millercenter.org.\n",
+    "# Second: we will select (click on) the presidents we are interested in.\n",
+    "# Third: we will scroll down on the website, allow the website to load (if it can),\n",
+    "# and we'll stop trying to scroll when we hit the bottom of the page. \n",
+    "# Fourth: we'll parse the page with beautiful soup.\n",
     "\n",
+    "# First: we will set the url and then we will go to Millercenter.org.\n",
     "url = \"http://millercenter.org/the-presidency/presidential-speeches\"\n",
+    "browser = webdriver.Chrome()\n",
+    "browser.get(url) \n",
     "\n",
-    "browser = webdriver.Chrome() #change this line depending on your system\n",
-    "browser.get(url) #go to the website \n",
-    "\n",
-    "\n",
-    "#This is what we will change if we want the whole data. Right now it only runs for 44th president\n",
-    "\n",
-    "for i in range(25,44):\n",
+    "# Second: we will select (click on) the presidents we are interested in.\n",
+    "first_pres_id = 25\n",
+    "last_pres_id = 44\n",
+    "for i in range(first_pres_id,last_pres_id):\n",
     "    x = i\n",
     "    absolutepath_president = f'/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[{x}]/label'\n",
     "    president1 = browser.find_element_by_xpath(absolutepath_president)\n",
     "    president1.click()\n",
     "    time.sleep(2)\n",
     "\n",
-    "\n",
-    "# president = browser.find_element_by_xpath(\n",
-    "#     '/html/body/div[2]/div/main/div[2]/div/div[2]/article/div/div[2]/div/div/div/form/div[3]/fieldset/div/div/div/div[42]/label')\n",
-    "# president.click()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "SCROLL_PAUSE_TIME = 2\n",
-    "\n",
-    "\n",
-    "#slight changes to be made!!\n",
-    "\n",
-    "# Get scroll height\n",
+    "# Third: we will scroll down on the website, allow the website to load (if it can),\n",
+    "# and we'll stop trying to scroll when we hit the bottom of the page. \n",
+    "scroll_pause_time = 2\n",
     "last_height = browser.execute_script(\"return document.body.scrollHeight\")\n",
     "\n",
     "while True:\n",
-    "    # Scroll down to bottom\n",
     "    browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "\n",
-    "    # Wait to load page\n",
-    "    time.sleep(SCROLL_PAUSE_TIME)\n",
-    "\n",
-    "    # Calculate new scroll height and compare with last scroll height\n",
+    "    time.sleep(scroll_pause_time) # Wait to load page\n",
     "    new_height = browser.execute_script(\"return document.body.scrollHeight\")\n",
     "    if new_height == last_height:\n",
-    "        break\n",
+    "        break \n",
     "    last_height = new_height\n",
     "\n",
+    "# Fourth: we'll parse the page with beautiful soup.\n",
     "soup = BeautifulSoup(browser.page_source, 'lxml')    "
    ]
   },
@@ -66,12 +98,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib3 \n",
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "import time\n",
-    "import string\n",
-    "\n",
     "link_str = []\n",
     "\n",
     "for link in soup.findAll('a', href=True):\n",
