--- a/Counting words.ipynb
+++ b/Counting words.ipynb
@@ -86,62 +86,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import nltk\n",
+    "import pandas as pd\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['thank', 'outline', 'overcome', 'agree', 'address', 'prevent', 'solve', 'focus', 'implement', 'bring', 'agree', 'invest', 'afford', 'yield', 'decline', 'borrow', 'expand', 'create', 'review', 'boost', 'recapitalize', 'ensure', 'weather', 'develop', 'require', 'strengthen', 'establish', 'discuss', 'implement', 'direct', 'report', 'consider', 'understand', 'ensure', 'reduce', 'enhance', 'ensure', 'strengthen', 'better', 'coordinate', 'reform', 'reflect', 'modernize', 'consider', 'dynamic', 'consider', 'streamline', 'agree', 'ensure', 'ensure', 'serve', 'focus', 'recognize', 'build', 'guide', 'reinvent', 'choose', 'prosperity', 'innovate', 'invest', 'create', 'start', 'build', 'change', 'recover', 'taiwan', 'ration', 'allow', 'undermine', 'trade', 'create', 'trade', 'reject', 'demonstrate', 'ensure', 'become', 'reverse', 'continue', 'pledge', 'conclude', 'question', 'continue', 'rebound', 'september', 'correct', 'rebuild', 'continue']\n",
-      "Counter({'ensure': 6, 'agree': 3, 'create': 3, 'consider': 3, 'continue': 3, 'focus': 2, 'implement': 2, 'invest': 2, 'strengthen': 2, 'build': 2, 'trade': 2, 'thank': 1, 'outline': 1, 'overcome': 1, 'address': 1, 'prevent': 1, 'solve': 1, 'bring': 1, 'afford': 1, 'yield': 1, 'decline': 1, 'borrow': 1, 'expand': 1, 'review': 1, 'boost': 1, 'recapitalize': 1, 'weather': 1, 'develop': 1, 'require': 1, 'establish': 1, 'discuss': 1, 'direct': 1, 'report': 1, 'understand': 1, 'reduce': 1, 'enhance': 1, 'better': 1, 'coordinate': 1, 'reform': 1, 'reflect': 1, 'modernize': 1, 'dynamic': 1, 'streamline': 1, 'serve': 1, 'recognize': 1, 'guide': 1, 'reinvent': 1, 'choose': 1, 'prosperity': 1, 'innovate': 1, 'start': 1, 'change': 1, 'recover': 1, 'taiwan': 1, 'ration': 1, 'allow': 1, 'undermine': 1, 'reject': 1, 'demonstrate': 1, 'become': 1, 'reverse': 1, 'pledge': 1, 'conclude': 1, 'question': 1, 'rebound': 1, 'september': 1, 'rebuild': 1})\n"
+      "          Date                                           Speeches\n",
+      "0   2018-03-19  [THE PRESIDENT: Thank you to our First Lady, M...\n",
+      "1   2018-02-23  [THE PRESIDENT: Thank you very much. Thank you...\n",
+      "2   2018-02-15  [THE PRESIDENT: My fellow Americans, today I s...\n",
+      "3   2018-02-01  [THE PRESIDENT: Thank you, Paul and Mitch, for...\n",
+      "4   2018-01-30  [Mr. Speaker, Mr. Vice President, Members of C...\n",
+      "5   2018-01-26  [PRESIDENT TRUMP: Thank you, Klaus, very much....\n",
+      "6   2017-12-18  [THE PRESIDENT: Thank you very much. Thank you...\n",
+      "7   2017-09-19  [PRESIDENT TRUMP: Mr. Secretary General, Mr. P...\n",
+      "8   2017-07-24  [TRUMP: Thank you, everybody. Thank you very m...\n",
+      "9   2017-06-29  [THE PRESIDENT: Thank you, everybody. Thank yo...\n",
+      "10  2017-02-28  [Mr. Speaker, Mr. Vice President, Members of C...\n",
+      "11  2017-01-20  [Chief Justice Roberts, President Carter, Pres...\n",
+      "12  2016-05-15  [Hello Rutgers!  (Applause.)  R-U rah-rah!  (A...\n",
+      "13  2016-03-22  [Thank you.  (Applause.)  Muchas gracias.  Tha...\n",
+      "14  2016-01-12  [Mr. Speaker, Mr. Vice President, Members of C...\n",
+      "15  2015-06-26  [THE PRESIDENT:  Giving all praise and honor t...\n",
+      "16  2015-03-07  [UDIENCE MEMBER:  We love you, President Obama...\n",
+      "17  2015-01-20  [Mr. Speaker, Mr. Vice President, Members of C...\n",
+      "18  2014-11-20  [My fellow Americans, tonight, I’d like to tal...\n",
+      "19  2014-01-28  [Mr. Speaker, Mr. Vice President, Members of C...\n",
+      "20  2013-12-04  [Thank you.  (Applause.)  Thank you, everybody...\n",
+      "21  2013-09-10  [My fellow Americans, tonight I want to talk t...\n",
+      "22  2013-07-24  [Hello, Warrensburg!  (Applause.)  Hello, Mule...\n",
+      "23  2013-07-19  [I wanted to come out here, first of all, to t...\n",
+      "24  2013-04-08  [Hello, Connecticut.  (Applause.)  Thank you. ...\n",
+      "25  2013-03-21  [Thank you.  (Applause.)  Thank you so much. W...\n",
+      "26  2013-03-01  [Good morning, everybody.  As you know, I just...\n",
+      "27  2013-02-13  [Mr. Speaker, Mr. Vice President, members of C...\n",
+      "28  2013-01-29  [Thank you!  (Applause.)  Thank you!  Thank yo...\n",
+      "29  2013-01-21  [Vice President Biden, Mr. Chief Justice,membe...\n",
+      "..         ...                                                ...\n",
+      "42  2010-11-03  [THE PRESIDENT: Good afternoon, everybody.  La...\n",
+      "43  2010-09-23  [THE PRESIDENT:  Mr. President, Mr. Secretary-...\n",
+      "44  2010-08-31  [Good evening.  Tonight, I’d like to talk to y...\n",
+      "45  2010-06-15  [Good evening.  As we speak, our nation faces ...\n",
+      "46  2010-04-28  [Thank you very much.  Everybody, please have ...\n",
+      "47  2010-04-15  [Thank you, everybody. Thank you. (Applause.) ...\n",
+      "48  2010-03-15  [THE PRESIDENT:  Hello, Ohio!  (Applause.)  It...\n",
+      "49  2010-02-09  [THE PRESIDENT:  Hello, everybody.  I am glad ...\n",
+      "50  2010-01-27  [Madam Speaker, Vice President Biden, Members ...\n",
+      "51  2009-12-10  [Your Majesties, Your Royal Highnesses, distin...\n",
+      "52  2009-12-01  [Good evening.  To the United States Corps of ...\n",
+      "53  2009-09-09  [Madam Speaker, Vice President Biden, Members ...\n",
+      "54  2009-06-04  [Thank you so much. Good afternoon. I am honor...\n",
+      "55  2009-05-26  [Thank you.  Well, I'm excited, too.  (Laughte...\n",
+      "56  2009-02-24  [Madam Speaker, Mr. Vice President, Members of...\n",
+      "57  2009-02-07  [Thank you, everybody.  Please have a seat.  Y...\n",
+      "58  2009-01-29  [It is fitting that with the very first bill I...\n",
+      "59  2009-01-20  [I stand here today humbled by the task before...\n",
+      "60  2009-01-15  [Fellow citizens:For eight years, it has been ...\n",
+      "61  2009-01-12  [THE PRESIDENT: Thank you. Tapper. We have bee...\n",
+      "62  2008-12-19  [Good morning. For years, America's automakers...\n",
+      "63  2008-11-13  [Thank you very much. Please be seated. Thank ...\n",
+      "64  2008-11-04  [If there is anyone out there who still doubts...\n",
+      "65  2008-10-03  [A short time ago, the House of Representative...\n",
+      "66  2008-08-28  [To Chairman Dean and my great friend Dick Dur...\n",
+      "67  2008-03-19  [Thank you all. Deputy Secretary England, than...\n",
+      "68  2008-01-28  [Madam Speaker, Vice President Cheney, members...\n",
+      "69  2007-04-09  [THE PRESIDENT: Thank you all. Thank you all v...\n",
+      "70  2007-01-23  [Thank you very much. And tonight I have the h...\n",
+      "71  2007-01-11  [Good evening. Tonight in Iraq, the Armed Forc...\n",
+      "\n",
+      "[72 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
+    "speeches = pd.read_pickle(\"speeches_1.pkl\")\n",
+    "\n",
+    "print(speeches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#This code is designed to count the words in speeches used over a presidential term.\n",
-    "import re\n",
-    "import nltk\n",
-    "from nltk.corpus import stopwords\n",
-    "#nltk.download('swadesh')\n",
-    "#nltk.download('averaged_perceptron_tagger')\n",
-    "from nltk.stem.porter import PorterStemmer\n",
-    "from collections import Counter\n",
     "\n",
-    "#tokenize the text and destem\n",
-    "speech_tokens = nltk.word_tokenize(text)\n",
+    "def strip_out_verbs(text):\n",
+    "    #tokenize the text and destem\n",
+    "    speech_tokens = nltk.word_tokenize(text)\n",
     "\n",
+    "    #these tokens include to punctuation - remove these\n",
+    "    pattern = re.compile(r'[^\\W]') \n",
+    "    cleaned_speech_tokens = [item.lower() for item in speech_tokens if re.match(pattern,item)]\n",
+    "    speech_tokens_pos_tag = nltk.pos_tag(cleaned_speech_tokens)\n",
+    "    #print(speech_tokens_pos_tag)\n",
     "\n",
+    "    speech_tokens_verbs = []\n",
+    "    for item in speech_tokens_pos_tag:\n",
+    "        if item[1] in ['VB']:\n",
+    "            if len(item[0])>4:\n",
+    "                speech_tokens_verbs.append(item[0])\n",
     "\n",
+    "    #turn plurals into singular\n",
+    "    #stemmer = PorterStemmer()\n",
+    "    #stemmed_speech_tokens = [stemmer.stem(str(item)) for item in speech_tokens_verbs]\n",
+    "    #print(stemmed_speech_tokens)\n",
     "\n",
-    "#these tokens include to punctuation - remove these\n",
-    "pattern = re.compile(r'[^\\W]') \n",
-    "cleaned_speech_tokens = [item.lower() for item in speech_tokens if re.match(pattern,item)]\n",
-    "speech_tokens_pos_tag = nltk.pos_tag(cleaned_speech_tokens)\n",
-    "#print(speech_tokens_pos_tag)\n",
+    "    #Now let's remove stop words\n",
+    "    refined_speech_tokens = [item for item in speech_tokens_verbs if not item in stopwords.words('english')]\n",
+    "    #print(refined_speech_tokens)\n",
+    "    #Now let's remove swadesh words\n",
+    "    refined_speech_tokens = [item for item in refined_speech_tokens if not item in swadesh.words('en')]\n",
+    "    \n",
+    "    #print(refined_speech_tokens.pos_tag())\n",
+    "    word_counts = Counter(refined_speech_tokens)\n",
+    "    print(word_counts)\n",
+    "    \n",
+    "    return refined_speech_tokens\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Date, Speeches]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# January 20, 2009: Inaugural Address\n",
+    "# May 15, 2016: Commencement Address at Rutgers University\n",
     "\n",
-    "speech_tokens_verbs = []\n",
-    "for item in speech_tokens_pos_tag:\n",
-    "    if item[1] in ['VB']:\n",
-    "        if len(item[0])>4:\n",
-    "            speech_tokens_verbs.append(item[0])\n",
-    "        \n",
-    "#turn plurals into singular\n",
-    "#stemmer = PorterStemmer()\n",
-    "#stemmed_speech_tokens = [stemmer.stem(str(item)) for item in speech_tokens_verbs]\n",
-    "#print(stemmed_speech_tokens)\n",
-    "\n",
-    "#Now let's remove stop words\n",
-    "refined_speech_tokens = [item for item in speech_tokens_verbs if not item in stopwords.words('english')]\n",
-    "#print(refined_speech_tokens)\n",
-    "#Now let's remove swadesh words\n",
-    "refined_speech_tokens = [item for item in refined_speech_tokens if not item in swadesh.words('en')]\n",
-    "\n",
-    "#print(refined_speech_tokens)\n",
-    "\n",
-    "#print(refined_speech_tokens.pos_tag())\n",
-    "word_counts = Counter(refined_speech_tokens)\n",
-    "print(word_counts)\n"
+    "print(speeches.loc[speeches['Date'] == 2009-01-20'])\n",
+    "\n"
    ]
   },
   {
@@ -181,6 +283,13 @@
     "    \n",
     "make_word_cloud(text_word_counts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
