add in annotations

--- a/Master Code - Annotated.ipynb
+++ b/Master Code - Annotated.ipynb
@@ -209,9 +209,7 @@
     "        url = \"http://millercenter.org\" + speech_urls[i]\n",
     "        response = http.request('GET', url)\n",
     "        speech_soup = BeautifulSoup(response.data, 'lxml')\n",
-    "        raw_speeches_all.append(str(speech_soup.findAll('div', {\"class\":\"view-transcript\"})))\n",
-    "        \n",
-    "print(raw_speeches_all)"
+    "        raw_speeches_all.append(str(speech_soup.findAll('div', {\"class\":\"view-transcript\"})))\n"
    ]
   },
   {
