--- a/Counting words.ipynb
+++ b/Counting words.ipynb
@@ -16,11 +16,13 @@
     "import re\n",
     "import nltk\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem.porter import PorterStemmer\n",
     "from collections import Counter\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from wordcloud import WordCloud"
    ]
   },
   {
@@ -100,7 +102,7 @@
     }
    ],
    "source": [
-    "speeches = pd.read_pickle(\"speeches_1.pkl\")\n",
+    "speeches = pd.read_pickle(\"speeches_full.pkl\")\n",
     "\n",
     "print(speeches)"
    ]
@@ -185,9 +187,6 @@
    "outputs": [],
    "source": [
     "#This code is designed to create word clouds\n",
-    "from wordcloud import WordCloud\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def make_word_cloud(text):\n",
     "    text_word_counts = \"\"\n",
     "    for item in text:\n",
@@ -270,7 +269,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# January 20, 2009: Inaugural Address\n",
+    "# January 12, 2016: 2016 State of the Union Address\n",
+    "\n",
+    "\n",
+    "first_speech_df = speeches.loc[speeches['Date'] == date(2009,1,20)]\n",
+    "final_speech_df = speeches.loc[speeches['Date'] == date(2016,1,12)]\n",
+    "\n",
+    "first_speech = \"\"\n",
+    "for row in first_speech_df['Speeches']:\n",
+    "    first_speech = first_speech + str(row)\n",
+    "\n",
+    "final_speech = \"\"\n",
+    "for row in final_speech_df['Speeches']:\n",
+    "    final_speech = final_speech + str(row)\n",
+    "\n",
+    "filibuster_speech = \"\"\n",
+    "for row in speeches['Speeches']:\n",
+    "    filibuster_speech = filibuster_speech + str(row)\n",
+    "\n",
+    "first_speech_verbs = strip_out_verbs(first_speech)\n",
+    "final_speech_verbs = strip_out_verbs(final_speech)\n",
+    "filibuster_speech_verbs = strip_out_verbs(filibuster_speech)"
+   ]
   }
  ],
  "metadata": {
