--- a/Visualization Code.ipynb
+++ b/Visualization Code.ipynb
@@ -5,25 +5,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#This Code is used to Visualize all the cool speech data that we've analyzed.\n",
-    "from datetime import datetime\n",
+    "import re\n",
+    "import nltk\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
-    "\n",
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "from datetime import datetime\n",
-    "import pandas_datareader.data as web\n",
-    "\n",
-    "df = web.DataReader(\"aapl\", 'morningstar',\n",
-    "                    datetime(2015, 1, 1),\n",
-    "                    datetime(2016, 7, 1)).reset_index()\n",
-    "\n",
-    "data = [go.Scatter(x=df.Date, y=df.High)]\n",
-    "\n",
-    "py.iplot(data)"
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from collections import Counter\n",
+    "from datetime import date\n",
+    "from wordcloud import WordCloud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-e6d179dad1e2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mspeeches\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"speeches_full.pkl\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "speeches = pd.read_pickle(\"speeches_full.pkl\")\n",
+    "\n"
    ]
   }
  ],
